# t6-python-sqlite-auditor

./: instruction.md  report.json  task.toml
environment/: .dockerignore  Dockerfile  Makefile  pyproject.toml  release_data.db  requirements.txt
environment/.github/workflows/: ci.yml
environment/config/: metrics.csv  ownership.json  ownership.yaml  settings.yaml  test_mapping.json
environment/docs/: CONTRIBUTING.md  README.md  architecture.md  handbook.md  schemas.md  setup.md
environment/fixtures/: sample_report.json
environment/src/: auditor.py  cli.py  config.py  db_manager.py  parser.py
environment/src/database/: connection.py
environment/src/models/: report.py
environment/src/utils/: __init__.py  exceptions.py  formatters.py  logger.py  validators.py
solution/: auditor_script.py  solve.sh
src/: cli.py
tests/: test.sh  test_outputs.py
